--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Devanagari Documentation
 email: info@motaitalic.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a project to document the typographic requirements for languages using the Devanagari script.
-baseurl: "/devanagari.github.io/" # the subpath of your site, e.g. /blog
+baseurl: "/devanagari-documentation/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: motaitalic
 twitter_username: motaitalic
